--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-runtime: go115
+runtime: go112
 env: standard
 entrypoint: 
 instance_class: F2
@@ -12,11 +12,7 @@ automatic_scaling:
   max_instances: 1
 
 handlers:
-  - url: /$
-    static_files: dist/index.html
-    upload: dist/index.html
-  - url: /(.+\.(html|css|js|gif|png|jpg|ico))$
-    static_files: dist/\1
-    upload: public/.+\.(html|css|js|gif|png|jpg|ico)$
-  - url: /.*
-    script: auto
+- url: /.*
+  script: _go_app
+- url: /execute
+  script: _go_app
